2008-03-19  Michael Natterer  <mitch@imendio.com>

	Fixes: NB#79791: Cannot set focus to Master volume using stylus

	* src/hildon-volumebar.c
	* src/hildon-vvolumebar.c
	* src/hildon-hvolumebar.c (init): remove UNSET_FLAGS(CAN_FOCUS) so
	the widget becomes focussable at all.

	* src/hildon-volumebar.c: implement GtkWidget::grab_focus() and
	set the focus to wither the mute button or the volumebar.

	Remove own "can-focus" property and instead listen to
	notify::can-focus in order to update the widget's state.

	Implement GtkWidget::focus() and make sure we can also *leave* the
	widget, not only enter it, depending on volumebar orientation and
	requested focus direction.

	Clean up set_mute() to cooperate nicely with all the above.

2008-03-04  Michael Natterer  <mitch@imendio.com>

	Fixes: NB#78481: information banners are hidden under browser menu

	* src/hildon-banner.c: call gtk_window_present() on the banners so
	they are risen if they are already visible.

2008-03-03  Sven Herzberg  <sven@imendio.com>

	Fixes: MB#1220: HildonWindow should take GtkMenu accel_group into account

	* examples/hildon-window-menu-example.c: (main): extended the window
	menu example to serve as a testcase for automatically added
	accelerator groups, too
	* src/hildon-window.c: (hildon_window_add_accel_group),
	(hildon_window_set_menu): added patch by Tommi Komulainen

2008-03-03  Sven Herzberg  <sven@imendio.com>

	Fixes: MB#1276: wrong allocators used in hildon_window_get_borders

	* src/hildon-window.c: (hildon_window_get_borders): don't imply any
	knowledge about the border allocators used within GTK+

2008-02-26  Sven Herzberg  <sven@imendio.com>

	Fixes: MB#2981: Build with asserts broken

	* src/hildon-date-editor.c,
	* src/hildon-number-editor.c,
	* src/hildon-time-editor.c,
	* src/hildon-weekday-picker.c: replace HILDON_IS_EDITOR_EDITOR by a
	the proper GType instance check

2008-02-25  Sven Herzberg  <sven@imendio.com>
